tests/NormalTests/paczka1/small_fuzzy/94413469.err
Error in line 5: g9ZRr1tkGZ S496 77,1
Error in line 11: g9ZRr1tkGZ S885 3,5
